# 3images

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  RAPPORT_PROJET.md  README.md  app.py  db.sqlite3  django_main.py  docker-compose.yml  main.py  manage.py  models.py  openai_service.py  pyproject.toml  replit.md  stable_diffusion_service.py
django_static/: script.js  style.css
django_templates/generator/: base.html  gallery.html  index.html
generator/: admin.py  models.py  urls.py  views.py
generator/migrations/: 0001_initial.py
image_generator_django/: asgi.py  settings.py  urls.py  wsgi.py
instance/: image_generator.db
static/css/: style.css
static/js/: script.js
templates/: base.html  gallery.html  index.html
templates/generator/: index.html
